<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/faceBook_tutorial_group_all_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/fb_group_paste_link_bg"
        android:paddingLeft="21dp"
        android:paddingTop="27dp"
        android:paddingBottom="22dp">

        <TextView
            android:id="@+id/faceBook_tutorial_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/san_francisco_bold"
            android:text="@string/facebook_tutorial_title"
            android:textColor="@color/fb_tutorial_text_color"
            android:textSize="21sp" />

        <LinearLayout
            android:id="@+id/faceBook_tutorial_group_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/faceBook_tutorial_title_tv"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="19dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="6dp"
                    android:src="@drawable/facebook_tutorial_dot" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/san_francisco_medium"
                    android:text="@string/facebook_tutorial_open_fb"
                    android:textColor="@color/fb_tutorial_text_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/fb_image_tutorial" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="6dp"
                    android:src="@drawable/facebook_tutorial_dot" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/san_francisco_medium"
                    android:text="@string/facebook_tutorial_copy_link"
                    android:textColor="@color/fb_tutorial_text_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="6dp"
                    android:src="@drawable/facebook_tutorial_dot" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/san_francisco_medium"
                    android:text="@string/facebook_tutorial_open_fb_download"
                    android:textColor="@color/fb_tutorial_text_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity=""
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="6dp"
                    android:src="@drawable/fb_tutorial_done_iv" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/san_francisco_medium"
                    android:paddingRight="44dp"
                    android:text="@string/facebook_tutorial_done"
                    android:textColor="@color/fb_tutorial_text_color"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/faceBook_tutorial_state_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="14dp"
        android:layout_marginRight="11dp"
        android:src="@drawable/fb_tutorial_info_iv" />

    <TextView
        android:id="@+id/face_book_tutorial_open_fb_tv"
        android:layout_width="143dp"
        android:layout_height="45dp"
        android:layout_below="@id/faceBook_tutorial_group_all_rl"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/paste_link_selector"
        android:fontFamily="@font/san_francisco_bold"
        android:gravity="center"
        android:text="@string/fb_home_open_fb"
        android:textColor="#F9F9F9"
        android:textSize="16sp"
        android:visibility="gone" />

</RelativeLayout>